2007-08-31  Stefan Sobernig  <stefan.sobernig@wu-wien.ac.at>

	* Pitched dependencies to xotcl-core 0.57, expecting the
          needed package-require patch being incorporated in the HEAD
          version.

	* tcl/15-xorb-aux-procs.tcl: Adjusted to recent xotcl-core
          versions that shifted DbPackage to the ::xo::db namespace
          instead of ::xo::db::sql; its instances are still placed in
          the old namespace.

2007-08-30  Stefan Sobernig  <stefan.sobernig@wu-wien.ac.at>

	* Added first release version of manual, both in the
          authoritive pdf and xhtml version. A Makefile (and tex4ht
          config) are provided as well to generate either or both
          target formats upon request.

	* tcl/20-xorb-procs.tcl: "Method slot" support is now more
          narrowly scoped: It is limited to slot calls on
          ServiceImplementation objects. This prevents a faulty
          streaming in new thread environments, i.e. object variables
          not being set as "set" calls are not allowed due to the
          revised configure etc.

2007-08-27  Stefan Sobernig  <stefan.sobernig@wu-wien.ac.at>

	* www/admin/regression-test.tcl: The regression test now runs
          smoothly and counts 149 test cases. 

	* tcl/xosc-procs.tcl: We now provide a first (not yet
          complete) proxy implementation for acs service contracts. We
          merged all facilities in this one library file for
          convenience and clarity. It is basically capable of
          declaring static client proxies, a dynamic form (as with
          acs_sc::invoke or acs::sc::call) will follow in a more
          general solution, along with dynamic client proxies in an
          upcoming version.

	* tcl/xorb-stub-procs.tcl: Shifted some attribute slots to
          the base class ContextObject: marshalledRequest,
          marshalledResponse, unmarshalledRequest,
          unmarshalledResponse; assuming that they will be required