@@ -9,6 +9,18 @@ ad_library {
 
 namespace eval ::xorb {
 
+  ::xotcl::Object ConfigurationManager
+  ConfigurationManager proc sourceSql {sourceScript} {
+    set packageRoot [acs_package_root_dir xotcl-request-broker]
+    set dbtype [db_driverkey ""]
+    set f $packageRoot/sql/$dbtype/$sourceScript
+    if {[file exists $f]} {
+      db_source_sql_file $path
+    } else {
+      my log "Could not source '$f'"
+    }
+  }
+
   proc before-uninstall {} {
     # / / / / / / / / / / / / / / / / /
     # Starting with v0.4 (r49) remove
@@ -29,10 +41,10 @@ namespace eval ::xorb {
   }
 
   proc after-install {} {
-    if {[db_driverkey ""] eq "postgresql"} {
-      set packageRoot [acs_package_root_dir xotcl-request-broker]
-      set path $packageRoot/sql/postgresql/acs-object-model-function-args.sql
-      db_source_sql_file $path
+    ConfigurationManager sourceSql acs-object-model-function-args.sql
+    set current [apm_highest_version_name acs-service-contract]
+    if {[apm_version_names_compare $current "5.4.0d1"] == -1} {
+      ConfigurationManager sourceSql acs-service-contract-function-args.sql
     }
   }
 
@@ -46,6 +58,15 @@ namespace eval ::xorb {
        # / / / / / / / / / / / / / / / / / / / / /
        # Upgrading to version 0.4
 
+       # / / / / / / / / / / / / / / / / / / / / /
+       # We also require some other, ACS object model,
+       # related functions to be registered with 
+       # acs_function_args. We did not report it so far
+       # so it is a generic, non-invasive patch.
+       # conditions:
+       # db_driver == postgres
+       ConfigurationManager sourceSql acs-object-model-function-args.sql
+    
        # / / / / / / / / / / / / / / / / / / / / /
        # Make sure that we can take of advantage
        # the ::xo::db::sql::* wrapper facility
@@ -62,32 +83,10 @@ namespace eval ::xorb {
        # - db_driver == postgres
 
        set current [apm_highest_version_name acs-service-contract]
-       if {[apm_version_names_compare $current "5.4.0d1"] == -1 && \
-	       [db_driverkey ""] eq "postgresql"} {
-	 set packageRoot [acs_package_root_dir xotcl-request-broker]
-	 set path $packageRoot/sql/postgresql/acs-service-contract-\
-	     function-args.sql
-	 db_source_sql_file $path
+       if {[apm_version_names_compare $current "5.4.0d1"] == -1} {
+	 ConfigurationManager sourceSql acs-service-contract-function-args.sql
        }
 
-       # / / / / / / / / / / / / / / / / / / / / /
-       # We also require some other, ACS object model,
-       # related functions to be registered with 
-       # acs_function_args. We did not report it so far
-       # so it is a generic, non-invasive patch.
-       # conditions:
-       # db_driver == postgres
-
-       if {[db_driverkey ""] eq "postgresql"} {
-	 set packageRoot [acs_package_root_dir xotcl-request-broker]
-	 set path $packageRoot/sql/postgresql/acs-object-model-function-args.sql
-	 db_source_sql_file $path
-       }
-
-       # TODO: db schema change:
-       # - move existing enhanced message type
-       # element declarations to xorb_msg_type_elements_ext!
-       
      }
    }
 }
