@@ -41,4 +41,4 @@
     \dim#1pt{#1}  
 }        
 \EndPreamble
-Note: This is an automatically generated XHTML document, provided for convenience. The authoritative version is the \Link[\jobname.pdf]{}{PDF}pdf\EndLink\ version.
+Note: This is an automatically generated XHTML document, provided for convenience. The authoritative version is the \Link[manual/\jobname.pdf]{}{PDF}pdf\EndLink\ version.
